# QSAR_pipe_Xgboost

./: .gitignore  IC_50.yaml  LICENSE  MANUAL.md  README.md  dataset_optimizer.py  drugbank_predictor.py  fast_grid_temp.json  molecular_predictor.py  pipeline_interface.py  pyproject.toml  xgboost_optimizer.py
data/processed/: dataset_molecular_optimizado.xlsx
data/raw/: all_descriptor_results_1751.xlsx  drugbank_compounds_cleaned.xlsx
notebooks/: Optimizador_Dataset_Explicado.ipynb  Predictor_pIC50_DrugBank.ipynb  XGBoost_Facil_2.ipynb
results/model_metadata/: covarianza_dominio_20251210_132954.json  covarianza_dominio_20251210_135015.json  covarianza_dominio_20251210_144928.json  covarianza_dominio_20251210_203645.json  covarianza_dominio_20251210_205721.json  metadatos_modelo_20251210_131843.json  metadatos_modelo_20251210_131925.json  metadatos_modelo_20251210_132954.json  metadatos_modelo_20251210_133100.json  metadatos_modelo_20251210_135015.json  metadatos_modelo_20251210_141039.json  metadatos_modelo_20251210_144614.json  metadatos_modelo_20251210_144928.json  metadatos_modelo_20251210_154205.json  metadatos_modelo_20251210_195528.json  metadatos_modelo_20251210_195912.json  metadatos_modelo_20251210_200816.json  metadatos_modelo_20251210_201752.json  metadatos_modelo_20251210_201829.json  metadatos_modelo_20251210_202508.json  metadatos_modelo_20251210_202849.json  metadatos_modelo_20251210_203308.json  metadatos_modelo_20251210_203605.json  metadatos_modelo_20251210_203645.json  (+11 more)
src/: dataset_optimizer.py  molecular_predictor.py  xgboost_optimizer.py
(+14 files in other folders)
