[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsar_pipeline"
version = "0.1.0"
description = "A comprehensive QSAR analysis and prediction pipeline."
readme = "README.md"
authors = [
  { name = "Luis E. Seijas", email = "luis.seijas@urosario.edu.co" }, 
  {name = "Andres Cervantes", email = "andres.cervantes@urosario.edu.co"}
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.6.0",
    "openpyxl>=3.0.0",
    "seaborn>=0.11.0",
    "matplotlib>=3.4.0",
    "rdkit>=2022.03.1",
    "rich>=12.0.0",
    "tqdm>=4.60.0",
]

requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/luisedseijas/QSAR_pipe_Xgboost"
Bug_Tracker = "https://github.com/luisedseijas/QSAR_pipe_Xgboost/issues"
